# report

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: _debug_celltrion.txt  _debug_lines.txt  broker_detect_preview.json
data/outputs/: SK_report.md  두산에너빌리티_report.md  삼성전기_report.md  셀트리온_report.md  신세계_report.md  한국전력_report.md
data/raw_pdfs/: README.md
docs/: presentation_slides.md
scripts/: analyze_chunks.py  organize_pdfs.py  rename_by_broker.py  verify_improvements.py
src/equity_rag/: __init__.py  __main__.py  api.py  cli.py  config.py  normalize.py  schemas.py
src/equity_rag/ingestion/: __init__.py  chunk_export.py  chunker.py  parser.py  pipeline.py
src/equity_rag/observability/: __init__.py  langsmith.py
src/equity_rag/rag/: __init__.py  fixed_queries.py  metric_normalization.py  multi_source_report.py  prompts.py  report_generator.py  retrieval_analyzer.py  section_summarizer.py  section_titles.py
src/equity_rag/vectorstore/: __init__.py  chroma_store.py  retrieval_rerank.py  retriever.py
tests/: test_chunk_export.py  test_chunker.py  test_fixed_queries.py  test_metadata.py  test_metric_normalization.py  test_multi_source.py  test_normalize.py  test_retrieval_rerank.py
