[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "equity-rag-mvp"
version = "0.1.0"
description = "Equity research PDF RAG MVP for Korean investment analysis reports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "llama-index>=0.14.0",
    "llama-parse>=0.6.0",
    "llama-index-vector-stores-chroma>=0.5.0",
    "llama-index-embeddings-openai>=0.6.0",
    "chromadb>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langsmith>=0.2.0",
    "pytest>=8.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
equity-rag = "equity_rag.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
